minor fixes and some html added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,28 @@
-<h1>
-  {{title}}
-</h1>
-<main>
+<nav class="navbar navbar-info navbar-fixed-top" id="main-navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+	        	<span class="sr-only">Toggle navigation</span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	    	</button>
+        </div>
+
+    <div class="collapse navbar-collapse" id="navigation-index">
+        <ul class="nav navbar-nav navbar-right" *ngIf="!isUserLoggedIn">
+            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/login']">Login</a></li>
+            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/register']">Register</a></li>
+            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right" *ngIf="isUserLoggedIn">
+            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/profile']">Profile</a></li>
+            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/logout']" (click)="logout()">Logout</a></li>
+            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
+        </ul>
+    </div>
+    </div>
+</nav>
+<div class="wrapper">
     <router-outlet></router-outlet>
-</main>
+</div>
