--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,62 @@
-<p>
-  register works!
-</p>
+<div class="header header-filter" style="background-image: url('http://www.mrwallpaper.com/wallpapers/eiffel-tower-background.jpg');">
+<div class="container">
+	<div class="row">
+		<div class="col-md-8 col-md-offset-7">
+			<div class="card card-signup">
+				<form [formGroup]="form" (ngSubmit)="register()">
+					<div class="header header-info text-center">
+						<h4>Sign Up</h4>
+					</div>
+					<div class="content">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group label-floating" [ngClass]="{'has-error':!form.controls['username'].valid && form.controls['username'].touched}">
+									<label class="control-label" for="tb-username">Username</label>
+									<input type="text" id="tb-username" formControlName="username" class="form-control">
+									<span class="text-danger" *ngIf="!form.controls['username'].valid && form.controls['username'].touched">Username must be between 3 and 20 characters.</span>
+								</div>
+								<div class="form-group label-floating" [ngClass]="{'has-error':!form.controls['firstName'].valid && form.controls['firstName'].touched}">
+									<label class="control-label" for="tb-firstName">First name</label>
+									<input type="text" id="tb-firstName" formControlName="firstName" class="form-control">
+									<span class="text-danger" *ngIf="!form.controls['firstName'].valid && form.controls['firstName'].touched">
+										First name must be between 3 and 20 characters.
+									</span>
+								</div>
+
+								<div class="form-group label-floating" [ngClass]="{'has-error':!form.controls['lastName'].valid && form.controls['lastName'].touched}">
+									<label class="control-label" for="tb-lastName">Last name</label>
+									<input type="text" id="tb-lastName" formControlName="lastName" class="form-control">
+									<span class="text-danger" *ngIf="!form.controls['lastName'].valid && form.controls['lastName'].touched">
+										Last name must be between 3 and 20 characters.
+									</span>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group label-floating" [ngClass]="{'has-error':!form.controls['password'].valid && form.controls['password'].touched}">
+									<label class="control-label" for="tb-password">Password</label>
+									<input type="password" id="tb-password" formControlName="password" class="form-control">
+									<span class="text-danger" *ngIf="!form.controls['password'].valid && form.controls['password'].touched">
+										Password must be between 6 and 30 symbols.
+									</span>
+								</div>
+
+								<div class="form-group label-floating" [ngClass]="{'has-error':!form.controls['confirmPassword'].valid && form.controls['confirmPassword'].touched}">
+									<label class="control-label" for="tb-confirm-password">Confirm Password</label>
+									<input type="password" id="tb-confirm-password" formControlName="confirmPassword" class="form-control">
+									<span class="text-danger" *ngIf="!form.controls['confirmPassword'].valid && form.controls['confirmPassword'].touched">
+										Confirm password must be between 6 and 30 symbols and should match password.
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="footer text-center">
+						<button class="btn btn-info btn-lg" type="submit" [disabled]="!form.valid">Register</button>
+					</div>
+				</form>
+				<simple-notifications [options]="options"></simple-notifications>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
