--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,18 +9,18 @@
 	    	</button>
         </div>
 
-    <div class="collapse navbar-collapse" id="navigation-index">
-        <ul class="nav navbar-nav navbar-right" *ngIf="!isUserLoggedIn">
-            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/login']">Login</a></li>
-            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/register']">Register</a></li>
-            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right" *ngIf="isUserLoggedIn">
-            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/profile']">Profile</a></li>
-            <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/logout']" (click)="logout()">Logout</a></li>
-            <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
-        </ul>
-    </div>
+        <div class="collapse navbar-collapse" id="navigation-index">
+            <ul class="nav navbar-nav navbar-right" *ngIf="!isUserLoggedIn">
+                <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/login']">Login</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/register']">Register</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum/create']">Forum</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" *ngIf="isUserLoggedIn">
+                <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/profile']">Profile</a></li>
+                <li class="cd-log_reg home" [routerLinkActive]="['active']"><a class="cd-signin" [routerLink]="['/logout']" (click)="logout()">Logout</a></li>
+                <li class="cd-log_reg" [routerLinkActive]="['active']"><a class="cd-signup" [routerLink]="['/forum']">Forum</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="wrapper">
