public profile visual and padding

--- a/src/app/users/public-profile/public-profile/public-profile.component.html
+++ b/src/app/users/public-profile/public-profile/public-profile.component.html
@@ -1,3 +1,53 @@
-<p>
-  public-profile works!
-</p>
+<aside class="profile-card">
+  <header>
+    <!-- here’s the avatar -->
+    <a target="" href="">
+      <img src="https://harbourspot.com/images/person_placeholder.jpg" class="hoverZoomLink">
+    </a>
+
+    <!-- the username -->
+    <h1>
+      username
+    </h1>
+
+    <!-- and role or location -->
+    <h2>
+      Full Name
+    </h2>
+
+  </header>
+
+  <!-- bit of a bio; who are you? -->
+  <div class="profile-bio">
+
+    <p>
+      About info - ako ima
+    </p>
+
+  </div>
+
+  <!-- some social links to show off -->
+  <ul class="profile-social-links">
+    <li>
+      <a target="_blank" href="https://www.facebook.com/creativedonut">
+        <i class="fa fa-facebook"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://twitter.com/dropyourbass">
+        <i class="fa fa-twitter"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://github.com/vipulsaxena">
+        <i class="fa fa-github"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://www.behance.net/vipulsaxena">
+
+        <i class="fa fa-behance"></i>
+      </a>
+    </li>
+  </ul>
+</aside>
