user public profiles now working

--- a/src/app/users/public-profile/public-profile/public-profile.component.html
+++ b/src/app/users/public-profile/public-profile/public-profile.component.html
@@ -6,14 +6,10 @@
     </a>
 
     <!-- the username -->
-    <h1>
-      username
-    </h1>
+    <h1>{{firstname}} {{lastname}}</h1>
 
     <!-- and role or location -->
-    <h2>
-      Full Name
-    </h2>
+    <h2>{{username}}</h2>
 
   </header>
 
@@ -21,7 +17,7 @@
   <div class="profile-bio">
 
     <p>
-      About info - ako ima
+      About info - moje da sa number of posts ili neshto takova
     </p>
 
   </div>
