Added comments of the forum post component

--- a/src/app/forum/single-post/single-post-comment/single-post-comment.component.html
+++ b/src/app/forum/single-post/single-post-comment/single-post-comment.component.html
@@ -1,6 +1,6 @@
 <div class="media">
     <div class="media-body" id="post-answer-info" data-id="5844ab6bcea03d00118d8fe9">
-        <p class="lead">comment.content</p>
+        <p class="lead">{{comment.content}}</p>
         <p class="comment-info"><span class="glyphicon glyphicon-time"></span> Posted on {{comment.date}} <a href="/users/{{comment.user.username}}">{{comment.user.username}}</a></p>
         <p class="likes">Likes: <span id="post-answer-likes-count">{{comment.likes}}</span>
             <button class="btn btn-info btn-sm like-post-answer" (click)="onLike()">Like</button>
