--- a/src/app/forum/single-post/single-post.component.html
+++ b/src/app/forum/single-post/single-post.component.html
@@ -12,9 +12,7 @@
         <p class="likes">Likes: <span id="post-likes-count">{{post.likes}}</span><button class="btn btn-info unlike-post">Unlike</button></p>
         <h3 class="comments">Comments: Number</h3>
         <hr>
-        <!--<app-single-post-comment
-            *ngFor="let comment of post.answers"
-        ></app-single-post-comment>-->
+        <app-single-post-comment *ngFor="let comment of post.answers" [comment]="comment"></app-single-post-comment>
         <hr>
     </div>
     <div class="well">
