--- a/src/app/forum/single-post/single-post.component.html
+++ b/src/app/forum/single-post/single-post.component.html
@@ -10,7 +10,7 @@
         <p>by <a href="/users/{{post.username}}">{{post.username}}</a></p>
         <hr>
         <p class="likes">Likes: <span id="post-likes-count">{{post.likes}}</span><button class="btn btn-info unlike-post">Unlike</button></p>
-        <h3 class="comments">Comments: Number</h3>
+        <h3 class="comments">Comments: {{post.answerLength}}</h3>
         <hr>
         <app-single-post-comment *ngFor="let comment of post.answers" [comment]="comment"></app-single-post-comment>
         <hr>
@@ -28,4 +28,3 @@
     </div>
     <hr>
 </div>
-<!--</div>-->
