Like and unlike forum post added

--- a/src/app/forum/single-post/single-post.component.html
+++ b/src/app/forum/single-post/single-post.component.html
@@ -9,7 +9,10 @@
         <hr>
         <p>by <a href="/users/{{post.username}}">{{post.username}}</a></p>
         <hr>
-        <p class="likes">Likes: <span id="post-likes-count">{{post.likes}}</span><button class="btn btn-info unlike-post">Unlike</button></p>
+        <p class="likes">Likes: <span id="post-likes-count">{{post.likes}}</span>
+            <button class="btn btn-info unlike-post" *ngIf="post.alreadyLiked" (click)="onPostUnlike()">Unlike</button>
+            <button class="btn btn-info like-post" *ngIf="!post.alreadyLiked" (click)="onPostLike()">Like</button>
+        </p>
         <h3 class="comments">Comments: {{post.answerLength}}</h3>
         <hr>
         <app-single-post-comment *ngFor="let comment of post.answers" [comment]="comment"></app-single-post-comment>
