--- a/src/app/users/public-profile/public-profile/public-profile.component.css
+++ b/src/app/users/public-profile/public-profile/public-profile.component.css
@@ -51,6 +51,10 @@ p {
   margin: 0px;
 }
 
+.waves-light {
+    background-color: #03a9f4;
+}
+
 .profile-card {
   background: #FFB300;
   width: 56px;
