--- a/src/app/users/public-profile/public-profile/public-profile.component.html
+++ b/src/app/users/public-profile/public-profile/public-profile.component.html
@@ -1,38 +1,42 @@
 <aside class="profile-card">
-<!--
-<header>
-  
-    <a target="" href="">
-      <img src="https://harbourspot.com/images/person_placeholder.jpg" class="hoverZoomLink">
-    </a>
+  <div *ngIf="displayHeader">
+    <header>
 
-    
-    <h1>{{firstname}} {{lastname}}</h1>
+      <a target="" href="">
+        <img src="https://harbourspot.com/images/person_placeholder.jpg" class="hoverZoomLink">
+      </a>
 
-    
-    <h2>{{username}}</h2>
 
-  </header>
+      <h1>{{firstname}} {{lastname}}</h1>
 
- 
-  <div class="profile-bio" *ngIf="!sendButtonClicked">
 
-    <p>
-      About info - moje da sa number ili link of posts ili neshto takova
-    </p>
+      <h2>{{username}}</h2>
 
+    </header>
+
+
+    <div class="profile-bio" *ngIf="!sendButtonClicked">
+
+      <p>
+        About info - moje da sa number ili link of posts ili neshto takova
+      </p>
+
+    </div>
+
+
+    <div *ngIf="isUserLoggedIn" class="profile-social-links">
+      <a (click)="displayHeader=!displayHeader"class="waves-effect waves-light btn">Send message</a>
+    </div>
   </div>
 
-  
-  <div *ngIf="isUserLoggedIn" class="profile-social-links">
-    <a class="waves-effect waves-light btn">Send message</a>
-  </div>-->
-
-  <form (ngSubmit)="sendMessage()">
-    <div class="form-group">
-      <label for="message">Your message</label>
-      <input type="text" class="form-control" id="message" name="message" [(ngModel)]="message.message" required>
-    </div>
-    <button type="submit" class="btn btn-default">Send</button>
-  </form>
+  <div class="send-msg" *ngIf="!displayHeader">
+    <form (ngSubmit)="sendMessage()">
+      <div class="form-group">
+        <label for="message">Your message to {{username}}</label>
+        <input type="text" class="form-control" id="message" name="message" [(ngModel)]="message.message" required>
+      </div>
+      <button type="submit" class="waves-effect waves-light btn">Send</button>
+      <button (click)="displayHeader=!displayHeader" class="waves-effect waves-light btn">Cancel</button>
+    </form>
+  </div>
 </aside>
