added presentation pipe

--- a/src/app/forum/list-posts/list-posts.component.html
+++ b/src/app/forum/list-posts/list-posts.component.html
@@ -23,13 +23,11 @@
             </thead>
             <tbody></tbody>
             <tbody>
-                <app-post-row *ngFor="let post of postsInfo.posts" [post]="post"></app-post-row>
-
+                <app-post-row *ngFor="let post of postsInfo.posts | presentationPipe : 30" [post]="post"></app-post-row>
             </tbody>
         </table>
     </div>
     <ul class="pagination">
-        <!--<li><a class="disabled" href="/forum?page=1">1</a></li>-->
         <app-pagination *ngFor="let page of postsInfo.pageCount | toNumberArray" [page]="page">
         </app-pagination>
     </ul>
