responsive like and unlike implemented

--- a/src/app/forum/list-posts/post-row/post-row.component.html
+++ b/src/app/forum/list-posts/post-row/post-row.component.html
@@ -1,7 +1,7 @@
 <tr id="post-info" data-id="5844ab2ccea03d00118d8f9d">
     <td class="text-center"><i class="fa fa-comments-o fa-2x text-primary"></i></td>
     <td>
-        <h3><a href="/forum/5844ab2ccea03d00118d8f9d">{{post.title}}</a><br><small>{{post.description}}</small></h3>
+        <h3><a href="/forum/post/{{post._id}}">{{post.title}}</a><br><small>{{post.description}}</small></h3>
     </td>
     <td class="text-center hidden-xs hidden-sm"><a href="/users/username">username</a></td>
     <td class="text-center hidden-xs hidden-sm">{{post.answerCount}}</td>
