--- a/src/app/profile/profile-nav/profile-nav.component.html
+++ b/src/app/profile/profile-nav/profile-nav.component.html
@@ -4,7 +4,7 @@
       <li role="presentation"><a [routerLink]="['/profile/home']">Details</a></li>
       <li role="presentation"><a [routerLink]="['/profile/edit']">Edit</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Messages <span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Messages<span class="button__badge">7</span> <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a [routerLink]="['/profile/inbox']">Inbox</a></li>
           <li><a [routerLink]="['/profile/outbox']">Outbox</a></li>
