--- a/src/app/category/list-categories/list-categories.component.html
+++ b/src/app/category/list-categories/list-categories.component.html
@@ -1,3 +1,15 @@
-<p>
-  list-categories works!
-</p>
+<div class="container">
+    <div class="section text-center section-landing">
+        <div class="features">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 class="title">These are our categories</h2>
+                </div>
+            </div>
+            <app-single-category *ngFor="let category of categories" [category]="category">
+
+            </app-single-category>
+
+        </div>
+    </div>
+</div>
