--- a/src/app/forum/search/search.component.html
+++ b/src/app/forum/search/search.component.html
@@ -1,3 +1,4 @@
-<p>
-  search works!
-</p>
+<div class="header header-info text-center" style="height: 25%">
+    <h2>Search results for: {{params}}</h2>
+    <div class="social-line"></div>
+</div>
