Search page working

--- a/src/app/forum/list-posts/post-row/post-row.component.html
+++ b/src/app/forum/list-posts/post-row/post-row.component.html
@@ -21,7 +21,7 @@
             <tr id="post-info" *ngFor="let currentPost of post | presentationPipe : 30">
                 <td class="text-center"><i class="fa fa-comments-o fa-2x text-primary"></i></td>
                 <td>
-                    <h3><a href="/forum/post/{{currentPost._id}}">{{post.title}}</a><br><small>{{currentPost.description}}</small></h3>
+                    <h3><a href="/forum/post/{{currentPost._id}}">{{currentPost.title}}</a><br><small>{{currentPost.description}}</small></h3>
                 </td>
                 <td class="text-center hidden-xs hidden-sm"><a href="/users/username">username</a></td>
                 <td class="text-center hidden-xs hidden-sm">{{currentPost.answerCount}}</td>
