--- a/src/app/forum/search/search.component.html
+++ b/src/app/forum/search/search.component.html
@@ -2,3 +2,4 @@
     <h2>Search results for: {{params}}</h2>
     <div class="social-line"></div>
 </div>
+<app-post-row [post]="postsInfo"> </app-post-row>
