--- a/src/app/users/all-posts-by-user/all-posts-by-user.component.html
+++ b/src/app/users/all-posts-by-user/all-posts-by-user.component.html
@@ -1,3 +1,3 @@
 <tbody>
-  <app-post-row *ngFor="let post of userPosts" [post]="post"><br/></app-post-row>
+    <app-post-row [post]="userPosts"><br/></app-post-row>
 </tbody>
