message now uses real user username

--- a/src/app/profile/profile-inbox/profile-inbox.component.html
+++ b/src/app/profile/profile-inbox/profile-inbox.component.html
@@ -1,17 +1,19 @@
-<table class="table table-responsive">
-  <thead>
-    <tr>
-      <th>From</th>
-      <th>Message</th>
-      <th>When</th>
-    </tr>
-  </thead>
-  <p *ngIf="(userDetails.inbox | json) == '[]'">You don't have any messages.</p>
-  <tbody *ngIf="(userDetails.inbox | json) !== '[]'">
-    <tr *ngFor="let message of userDetails.inbox">
-      <td><a href="/users/{{message.user.username}}">{{message.user.username}}</a></td>
-      <td>{{message.message}}</td>
-      <td>{{message.date | date:'medium'}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <table class="table table-responsive">
+    <thead>
+      <tr>
+        <th>From</th>
+        <th>Message</th>
+        <th>When</th>
+      </tr>
+    </thead>
+    <p *ngIf="(userDetails.inbox | json) == '[]'">You don't have any messages.</p>
+    <tbody *ngIf="(userDetails.inbox | json) !== '[]'">
+      <tr *ngFor="let message of userDetails.inbox">
+        <td><a href="/users/{{message.user.username}}">{{message.user.username}}</a></td>
+        <td>{{message.message}}</td>
+        <td>{{message.date | date:'medium'}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
