fixed like and unlike to use current user

--- a/src/app/forum/single-post/single-post-comment/single-post-comment.component.html
+++ b/src/app/forum/single-post/single-post-comment/single-post-comment.component.html
@@ -1,5 +1,5 @@
 <div class="media">
-    <div class="media-body" id="post-answer-info" data-id="5844ab6bcea03d00118d8fe9">
+    <div class="media-body" id="post-answer-info">
         <p class="lead">{{comment.content}}</p>
         <p class="comment-info"><span class="glyphicon glyphicon-time"></span> Posted on {{comment.date}} by <a href="/users/{{comment.user.username}}">{{comment.user.username}}</a></p>
         <p class="likes">Likes: <span id="post-answer-likes-count">{{likes}}</span>
