--- a/src/app/profile/profile-inbox/profile-inbox.component.html
+++ b/src/app/profile/profile-inbox/profile-inbox.component.html
@@ -11,10 +11,10 @@
     <tbody *ngIf="(userDetails.inbox | json) !== '[]'">
       <tr *ngFor="let message of userDetails.inbox">
         <td><a href="/users/{{message.user.username}}">{{message.user.username}}</a></td>
-        <td *ngIf="!message.message.isViewed"><strong>{{message.message}}</strong></td>
-        <td *ngIf="!message.message.isViewed"><strong>{{message.date | date:'medium'}}</strong></td>
-        <td *ngIf="message.message.isViewed">{{message.message}}</td>
-        <td *ngIf="message.message.isViewed">{{message.date | date:'medium'}}</td>
+        <td *ngIf="!message.isViewed"><strong>{{message.message}}</strong></td>
+        <td *ngIf="!message.isViewed"><strong>{{message.date | date:'medium'}}</strong></td>
+        <td *ngIf="message.isViewed">{{message.message}}</td>
+        <td *ngIf="message.isViewed">{{message.date | date:'medium'}}</td>
       </tr>
     </tbody>
   </table>
